cmake_minimum_required(VERSION 3.20)

project(AoC2025)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_GENERATOR_PLATFORM x64)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>-${CMAKE_SYSTEM_NAME}-x64)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>-${CMAKE_SYSTEM_NAME}-x64)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>-${CMAKE_SYSTEM_NAME}-x64)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin-int/Debug-${CMAKE_SYSTEM_NAME}-x64)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin-int/Release-${CMAKE_SYSTEM_NAME}-x64)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configuration types" FORCE)

if(MSVC)
    add_compile_options(/MP)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(BUILD_TESTING OFF CACHE BOOL "Disable tests" FORCE)

add_executable(AoC2025)

file(GLOB_RECURSE AOC2025_HEADERS CONFIGURE_DEPENDS "AOC2025/src/*.h")
file(GLOB_RECURSE AOC2025_SOURCES CONFIGURE_DEPENDS "AOC2025/src/*.cpp")
   
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${AOC2025_HEADERS} ${AOC2025_SOURCES})

target_sources(AoC2025 PRIVATE
    ${AOC2025_HEADERS}
    ${AOC2025_SOURCES}
)

target_include_directories(AoC2025 PRIVATE
    AOC2025/src
)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT AoC2025)

set_target_properties(AoC2025 PROPERTIES
    VS_DEBUGGER_WORKING_DIRECTORY $<TARGET_FILE_DIR:AoC2025>
)

target_compile_options(AoC2025 PRIVATE
    $<$<CONFIG:Release>:/O2>
)